Optimize chromeos WebUI dialogs

The Chrome OS Settings based WebUI dialogs for configuring networks
and bluetooth devices are fairly complicated. Vulcanizing these
noticably improves load times.

This CL also:
* Moves each dialog to a separate folder including its own BUILD.gn and
  compiled_resources2.gyp files.
* Moves the "optimize_ui" GN define from chrome/common/features.gni to
  ui/base/ui_features.gni
* Uses "optimize_ui" to omit resources in ui/resources/cr_components
  that are only included in files that are optimized.
* Adds some URLSearchParams parsing to support dialogs as tabs for
  debugging.

The net increase to the Resources.pak file is +49K or +0.19%.

Bug: 798057
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I835deccfe7491115c853b698e6a941d7bbd20db8
Reviewed-on: https://chromium-review.googlesource.com/898483
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535487}
Former-commit-id: 6246c24a4c587bf985c7424e77ec37de52634e98